--- a/hora-app/package.json
+++ b/hora-app/package.json
@@ -23,6 +23,7 @@
     "react-image": "^4.1.0",
     "react-image-gallery": "^1.3.0",
     "react-image-magnify": "^2.7.4",
+    "react-imgix": "^9.8.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
