--- a/hora-app/package.json
+++ b/hora-app/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-image": "^4.1.0",
     "react-image-gallery": "^1.3.0",
