--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-time-picker": "^6.6.0",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
