--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-image-gallery": "^1.3.0",
     "react-image-magnify": "^2.7.4",
     "react-imgix": "^9.8.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -34,6 +35,8 @@
     "react-time-picker": "^6.6.0",
     "react-toggle": "^4.1.3",
     "redux": "^5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
