--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-image-gallery": "^1.3.0",
     "react-image-magnify": "^2.7.4",
     "react-imgix": "^9.8.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
